--- a/Psychic-game.html
+++ b/Psychic-game.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="utf-8">
     <title>Psychic Game</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="Psychic-game/assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="Psychic-game/assets/css/style.css">
+	
+     
+      
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
