--- a/Psychic-game.html
+++ b/Psychic-game.html
@@ -8,7 +8,7 @@
 	
      
       
-    <script src="assets/javascript/game.js"></script>
+    <script src="Psychic-game/assets/javascript/game.js"></script>
 </head>
 <body>
 	<div id="game">
