--- a/Psychic-game.html
+++ b/Psychic-game.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8">
     <title>Psychic Game</title>
-    <link rel="stylesheet" type="text/css" href="Psychic-Game/assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="Psychic-Game/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-    <script src="Psychic-Game/assets/javascript/game.js"></script>
+    <script src="assets/javascript/game.js"></script>
 </head>
 <body>
 	<div id="game">
